# asteroids

./: .gitignore  Cargo.toml  build.rs  build_game.sh
.cargo/: .config.toml  config.toml
scripts/: build_all.sh  build_docs.sh  build_linux.sh  build_webpage.sh  build_windows.sh  index.html  run_testing.sh
src/: asteroids.rs  bullets.rs  death_screen.rs  game.rs  labels.rs  lib.rs  main.rs  mainmenu.rs  physics_engine.rs  score.rs  ship.rs
